[package]
name = "psmsg"
version = "0.1.0"
authors = ["HuangJian <1342042894@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3"
async-std = { version = "1.6.4", features = ["attributes"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.0"
env_logger = "0.7.1"
